# Orbit-Simulator

./: CMakeLists.txt  README.md
shaders/: animmodel.vs  cubemaps.vs  default.fs  default.vs  fbo_debug.fs  geometryShader.fs  geometryShader.vs  lightingShader.fs  lightingShader.vs  line.fs  line.vs  lineShader.fs  lineShader.vs  model.fs  model.vs  phong.fs  phong.vs  point_shadows_depth.fs  point_shadows_depth.gs  point_shadows_depth.vs  postprocess.fs  rainbow.fs  rainbow.vs  shadowmap_depth.fs  shadowmap_depth.vs  shadowmapping.fs  skybox.fs  skybox.vs  sprite.vs  thumbnail.fs  thumbnail.vs  triplanar.fs  water.fs  water.gs  water.vs
src/: template_class
src/core/: box.h  game.h  main.cpp  settings.cpp  settings.h  template.h  transform.h  vertex.h
src/render/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  free_cam.cpp  free_cam.h  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h  texture.h
src/render/headers/: Editor.h
src/util/: Debug.cpp  Debug.h  IO.cpp  IO.h  ImGuiLayer.cpp  ImGuiLayer.h  Polygon.h  assets.cpp  assets.h  bezier.h  bullet_physics.cpp  bullet_physics.h  define.h  file.h  ode_physics.h  split.h
